# deepresearch-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py
langfuse/: docker-compose.yml
src/backend/api/: schemas.py  server.py
src/backend/core/: config.py
src/backend/domain/: interfaces.py  models.py
src/backend/infrastructure/agents/: orchestrator_agent.py  search_subgraph.py  session_tools.py  states.py  worker_agent.py
src/backend/infrastructure/agents/prompt/: planner_prompt.py  reporter_prompt.py  worker_prompt.py
src/backend/infrastructure/llm/: factory.py
src/backend/infrastructure/mcp_connector/: client.py
src/backend/infrastructure/parse/: factory.py  parser.py  splitter.py
src/backend/infrastructure/repository/: factory.py  session_chroma_store.py  session_memory_manager.py  workspace_registry.py
src/backend/services/: agent_service.py  factory.py  ingestion_service.py  session_rag_service.py
src/frontend/: tailwind.config.js
src/frontend/src/: App.jsx
tests/: integration_test.py  test_agent_service_tracing.py  test_llm_concurrency.py  test_mcp_client.py  test_web_search.py  test_workspace_core.py
