[project]
name = "deepresearch-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.3.5",
    "docling==2.58.0",
    "docling-core==2.49.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.1",
    "jieba>=0.42.1",
    "json-repair>=0.53.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langfuse>=3.10.1",
    "langgraph[sqlite]>=1.0.3",
    "litellm[proxy]>=1.79.3",
    "modelscope>=1.32.0",
    "numpy>=2.3.4",
    "openai>=2.7.2",
    "opensearch-py[async]>=3.0.0",
    "mcp>=1.1.2",
    "duckduckgo-search>=6.0.0",
    "pillow",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.18",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.29.0",
]
